# BC24-API

./: .env-template  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  todo.md
api/: router.py
api/routes/: event_routes.py  resource_routes.py  roles_routes.py  wallet_routes.py
core/: abi.json  config.py
service/: blockchain_service.py  event_service.py  private_key_service.py  resource_service.py  role_service.py  walletService.py  wallet_service.py
shemas/: CreateWalletResponse.py  Data.py  EventResponse.py  MetaData.py  MetaDataRequest.py  MetaDataResponse.py  MintOneToManyRessourceRequest.py  MintRessourceRequest.py  MintToManyDataRequest.py  ResourceCreatedEventResponse.py  ResourceMetaDataChangedEventResponse.py  ResourceTemplateResponse.py  RoleAssignmentRequest.py  RoleResponse.py  TransactionRequest.py  TransactionResponse.py  TransferResourceRequest.py  TransferResourceResponse.py  shemas.py
tests/: stressTest.py
