[tool.poetry]
name = "bc24-api"
version = "0.1.0"
description = "API for interactions between the BC24 Webapp and the private blockchain"
authors = ["Etienne Baumgartner <baume96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"
pydantic = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
